# pikkr

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  ci.sh
.travis/: format_diff.sh  travis.sh
benches/: index_builder.rs  parser.rs
src/: avx.rs  bit.rs  emulated.rs  error.rs  index_builder.rs  lib.rs  parser.rs  pikkr.rs  query.rs  result.rs  stat.rs  utf8.rs
tests/: issues.rs
